find and add friends (done)